// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route should render <PageMap /> 1`] = `
<div
  className="layout-page"
>
  <section
    className="layout-page__left-column"
  >
    <a
      aria-label="Логотип"
      className="layout-page__logo"
      href="/"
    />
    <nav
      className="menu"
    >
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_uploads icon_size_medium icon_color_black"
                />
                Источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/ugc-shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_ugc icon_size_medium icon_color_black"
                />
                UGC источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_archive icon_size_medium icon_color_black"
                />
                Поставки
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item menu-item_active"
      >
        <a
          className="menu-item__link"
          href="/map"
          onClick={[Function]}
        >
          <button
            aria-pressed={true}
            autoComplete="off"
            className="Button2 Button2_checked Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_white"
                />
                Карта сессий
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="sub-menu"
      >
        <div>
          <a
            className="sub-menu-item sub-menu-item_active"
            href="map?sessionStatus=all"
            onClick={[Function]}
          >
            Все
          </a>
        </div>
        <div>
          <a
            className="sub-menu-item"
            href="map?sessionStatus=NEW"
            onClick={[Function]}
          >
            Новые
          </a>
        </div>
        <div>
          <a
            className="sub-menu-item"
            href="map?sessionStatus=APPROVED"
            onClick={[Function]}
          >
            Подтвержденные
          </a>
        </div>
        <div>
          <a
            className="sub-menu-item"
            href="map?sessionStatus=DECLINED"
            onClick={[Function]}
          >
            Забракованные
          </a>
        </div>
      </div>
      <div
        className="line"
      />
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/panoramas"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_clock icon_size_medium icon_color_black"
                />
                Редактор панорам
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/commits"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_branch icon_size_medium icon_color_black"
                />
                Коммиты
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/releases"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_thunder icon_size_medium icon_color_black"
                />
                Релизы
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/tasks"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_check icon_size_medium icon_color_black"
                />
                Задачи
              </div>
            </span>
          </button>
        </a>
      </div>
    </nav>
  </section>
  <section
    className="layout-page__right-column"
  >
    <main
      className="layout-page-content"
    >
      <article
        className="layout-page-content__content"
      >
        <section
          className="page-map__sidebar"
        >
          <aside
            className="sidebar-sessions"
          >
            <div
              className="sidebar-sessions__content"
            >
              <div
                className="sidebar-sessions__progress"
              >
                <div
                  className="Spin2 Spin2_progress Spin2_size_l Spin2_view_default"
                />
              </div>
            </div>
            <footer
              className="sidebar-sessions__footer"
            >
              <div
                className="sidebar-search-filter"
              >
                <div
                  className="sidebar-search-filter__select"
                >
                  <div
                    className="select-control select-control_size_s"
                    style={
                      Object {
                        "width": "100px",
                      }
                    }
                  >
                    <div
                      className="select-control__icon"
                    >
                      <span
                        className="icon icon_name_man icon_size_medium icon_color_gray"
                      />
                    </div>
                    <div
                      className="select-control__control"
                    >
                      <span
                        className="Select2 Select2_width_max"
                      >
                        <button
                          aria-expanded={false}
                          aria-multiselectable={false}
                          aria-pressed={false}
                          autoComplete="off"
                          className="Button2 Button2_view_default Button2_width_max Button2_size_s Select2-Button"
                          onBlur={[Function]}
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          onKeyUp={[Function]}
                          onMouseDown={[Function]}
                          onMouseLeave={[Function]}
                          onMouseUp={[Function]}
                          role="listbox"
                          size="s"
                          type="button"
                        >
                          <span
                            aria-hidden={true}
                            className="Icon Icon_direction_bottom Icon_size_s Icon_hasGlyph Icon_glyph_carets-v Button2-Icon Button2-Icon_side_right"
                            style={Object {}}
                          >
                            <svg
                              focusable="false"
                              height="14"
                              width="8"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M4 0l4 6H0l4-6zm0 14l4-6H0l4 6z"
                              />
                            </svg>
                          </span>
                          <span
                            className="Button2-Text"
                          >
                            Все
                          </span>
                        </button>
                      </span>
                    </div>
                  </div>
                </div>
                <span
                  className="Textinput Textinput_size_s Textinput_view_default"
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <input
                    aria-invalid={false}
                    autoComplete="off"
                    className="Textinput-Control"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    placeholder="Фильтр"
                    value=""
                  />
                  <span
                    className="Textinput-Box"
                  />
                </span>
              </div>
            </footer>
          </aside>
        </section>
        <div
          className="page-map__content"
        />
      </article>
    </main>
  </section>
</div>
`;

exports[`Route should render <PageNotFound /> 1`] = `
<div
  className="layout-page"
>
  <section
    className="layout-page__left-column"
  >
    <a
      aria-label="Логотип"
      className="layout-page__logo"
      href="/"
    />
    <nav
      className="menu"
    >
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_uploads icon_size_medium icon_color_black"
                />
                Источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/ugc-shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_ugc icon_size_medium icon_color_black"
                />
                UGC источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_archive icon_size_medium icon_color_black"
                />
                Поставки
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/map"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_black"
                />
                Карта сессий
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="line"
      />
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/panoramas"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_clock icon_size_medium icon_color_black"
                />
                Редактор панорам
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/commits"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_branch icon_size_medium icon_color_black"
                />
                Коммиты
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/releases"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_thunder icon_size_medium icon_color_black"
                />
                Релизы
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/tasks"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_check icon_size_medium icon_color_black"
                />
                Задачи
              </div>
            </span>
          </button>
        </a>
      </div>
    </nav>
  </section>
  <section
    className="layout-page__right-column"
  >
    <main
      className="layout-page-content"
    >
      <header
        className="layout-header"
      >
        <div
          className="layout-header__header"
        >
          <div
            className="layout-header__right"
          >
            <a
              className="logo"
              href="https://staff.yandex-team.ru/test-login"
              target="_blank"
            >
              <div
                className="UserPic UserPic_size_m"
              >
                <img
                  className="UserPic-Image"
                  src="https://center.yandex-team.ru/user/avatar/test-login/42"
                />
              </div>
              <span
                className="logo__login"
              >
                test-login
              </span>
            </a>
          </div>
          <h1
            className="layout-header__title"
          >
            Страница не найдена
          </h1>
        </div>
      </header>
      <article
        className="layout-page-content__content layout-page-content__content_indent"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          На главную
        </a>
      </article>
    </main>
  </section>
</div>
`;

exports[`Route should render <PageShipments /> 1`] = `
<div
  className="layout-page"
>
  <section
    className="layout-page__left-column"
  >
    <a
      aria-label="Логотип"
      className="layout-page__logo"
      href="/"
    />
    <nav
      className="menu"
    >
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_uploads icon_size_medium icon_color_black"
                />
                Источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/ugc-shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_ugc icon_size_medium icon_color_black"
                />
                UGC источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item menu-item_active"
      >
        <a
          className="menu-item__link"
          href="/shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={true}
            autoComplete="off"
            className="Button2 Button2_checked Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_archive icon_size_medium icon_color_white"
                />
                Поставки
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/map"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_black"
                />
                Карта сессий
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="line"
      />
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/panoramas"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_clock icon_size_medium icon_color_black"
                />
                Редактор панорам
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/commits"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_branch icon_size_medium icon_color_black"
                />
                Коммиты
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/releases"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_thunder icon_size_medium icon_color_black"
                />
                Релизы
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/tasks"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_check icon_size_medium icon_color_black"
                />
                Задачи
              </div>
            </span>
          </button>
        </a>
      </div>
    </nav>
  </section>
  <section
    className="layout-page__right-column"
  >
    <main
      className="layout-page-content"
    >
      <header
        className="layout-header"
      >
        <div
          className="layout-header__header"
        >
          <div
            className="layout-header__right"
          >
            <a
              className="logo"
              href="https://staff.yandex-team.ru/test-login"
              target="_blank"
            >
              <div
                className="UserPic UserPic_size_m"
              >
                <img
                  className="UserPic-Image"
                  src="https://center.yandex-team.ru/user/avatar/test-login/42"
                />
              </div>
              <span
                className="logo__login"
              >
                test-login
              </span>
            </a>
          </div>
          <h1
            className="layout-header__title"
          >
            Поставки
          </h1>
        </div>
        <div
          className="layout-header-filter"
        >
          <nav
            className="filter-control filter-control_disabled"
          >
            <button
              className="filter-control__item filter-control__item_active"
              disabled={true}
              onClick={[Function]}
            >
              Все
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Я исполнитель
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Без исполнителя
            </button>
          </nav>
          <nav
            className="filter-control filter-control_disabled"
          >
            <button
              className="filter-control__item filter-control__item_active"
              disabled={true}
              onClick={[Function]}
            >
              Все
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Street
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Indoor
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Air
            </button>
          </nav>
        </div>
        <div
          className="layout-header-filter-wrapper"
        >
          <div
            className="layout-header-filter"
          >
            <div
              className="select-control select-control_disabled select-control_size_m"
              style={
                Object {
                  "width": "200px",
                }
              }
            >
              <div
                className="select-control__icon"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_gray"
                />
              </div>
              <div
                className="select-control__title"
              >
                Регион
              </div>
              <div
                className="select-control__control"
              >
                <span
                  className="Select2 Select2_disabled Select2_width_max"
                >
                  <button
                    aria-disabled={true}
                    aria-expanded={false}
                    aria-multiselectable={false}
                    aria-pressed={false}
                    autoComplete="off"
                    className="Button2 Button2_view_default Button2_width_max Button2_size_m Select2-Button"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    role="listbox"
                    size="m"
                    type="button"
                  >
                    <span
                      aria-hidden={true}
                      className="Icon Icon_direction_bottom Icon_size_m Icon_hasGlyph Icon_glyph_carets-v Button2-Icon Button2-Icon_side_right"
                      style={Object {}}
                    >
                      <svg
                        focusable="false"
                        height="14"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 0l4 6H0l4-6zm0 14l4-6H0l4 6z"
                        />
                      </svg>
                    </span>
                    <span
                      className="Button2-Text"
                    >
                      Все
                    </span>
                  </button>
                </span>
              </div>
            </div>
            <div
              className="select-control select-control_disabled select-control_size_m"
              style={
                Object {
                  "width": "250px",
                }
              }
            >
              <div
                className="select-control__icon"
              >
                <span
                  className="icon icon_name_folder icon_size_medium icon_color_gray"
                />
              </div>
              <div
                className="select-control__title"
              >
                Поставщик
              </div>
              <div
                className="select-control__control"
              >
                <span
                  className="Select2 Select2_disabled Select2_width_max"
                >
                  <button
                    aria-disabled={true}
                    aria-expanded={false}
                    aria-multiselectable={false}
                    aria-pressed={false}
                    autoComplete="off"
                    className="Button2 Button2_view_default Button2_width_max Button2_size_m Select2-Button"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    role="listbox"
                    size="m"
                    type="button"
                  >
                    <span
                      aria-hidden={true}
                      className="Icon Icon_direction_bottom Icon_size_m Icon_hasGlyph Icon_glyph_carets-v Button2-Icon Button2-Icon_side_right"
                      style={Object {}}
                    >
                      <svg
                        focusable="false"
                        height="14"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 0l4 6H0l4-6zm0 14l4-6H0l4 6z"
                        />
                      </svg>
                    </span>
                    <span
                      className="Button2-Text"
                    >
                      Все
                    </span>
                  </button>
                </span>
              </div>
            </div>
            <div
              className="select-control select-control_disabled select-control_size_m"
              style={
                Object {
                  "width": "250px",
                }
              }
            >
              <div
                className="select-control__icon"
              >
                <span
                  className="icon icon_name_tag icon_size_medium icon_color_gray"
                />
              </div>
              <div
                className="select-control__title"
              >
                Тэг
              </div>
              <div
                className="select-control__control"
              >
                <span
                  className="Select2 Select2_disabled Select2_width_max"
                >
                  <button
                    aria-disabled={true}
                    aria-expanded={false}
                    aria-multiselectable={false}
                    aria-pressed={false}
                    autoComplete="off"
                    className="Button2 Button2_view_default Button2_width_max Button2_size_m Select2-Button"
                    disabled={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    role="listbox"
                    size="m"
                    type="button"
                  >
                    <span
                      aria-hidden={true}
                      className="Icon Icon_direction_bottom Icon_size_m Icon_hasGlyph Icon_glyph_carets-v Button2-Icon Button2-Icon_side_right"
                      style={Object {}}
                    >
                      <svg
                        focusable="false"
                        height="14"
                        width="8"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M4 0l4 6H0l4-6zm0 14l4-6H0l4 6z"
                        />
                      </svg>
                    </span>
                    <span
                      className="Button2-Text"
                    >
                      Все
                    </span>
                  </button>
                </span>
              </div>
            </div>
          </div>
        </div>
      </header>
      <article
        className="layout-page-content__content layout-page-content__content_indent"
      >
        <div
          className="grid-center"
        >
          <div
            className="Spin2 Spin2_progress Spin2_size_l Spin2_view_default"
          />
        </div>
      </article>
    </main>
  </section>
</div>
`;

exports[`Route should render <PageSources /> 1`] = `
<div
  className="layout-page"
>
  <section
    className="layout-page__left-column"
  >
    <a
      aria-label="Логотип"
      className="layout-page__logo"
      href="/"
    />
    <nav
      className="menu"
    >
      <div
        className="menu-item menu-item_active"
      >
        <a
          className="menu-item__link"
          href="/"
          onClick={[Function]}
        >
          <button
            aria-pressed={true}
            autoComplete="off"
            className="Button2 Button2_checked Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_uploads icon_size_medium icon_color_white"
                />
                Источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/ugc-shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_ugc icon_size_medium icon_color_black"
                />
                UGC источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_archive icon_size_medium icon_color_black"
                />
                Поставки
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/map"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_black"
                />
                Карта сессий
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="line"
      />
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/panoramas"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_clock icon_size_medium icon_color_black"
                />
                Редактор панорам
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/commits"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_branch icon_size_medium icon_color_black"
                />
                Коммиты
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/releases"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_thunder icon_size_medium icon_color_black"
                />
                Релизы
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/tasks"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_check icon_size_medium icon_color_black"
                />
                Задачи
              </div>
            </span>
          </button>
        </a>
      </div>
    </nav>
  </section>
  <section
    className="layout-page__right-column"
  >
    <main
      className="layout-page-content"
    >
      <header
        className="layout-header"
      >
        <div
          className="layout-header__header"
        >
          <div
            className="layout-header__right"
          >
            <a
              className="logo"
              href="https://staff.yandex-team.ru/test-login"
              target="_blank"
            >
              <div
                className="UserPic UserPic_size_m"
              >
                <img
                  className="UserPic-Image"
                  src="https://center.yandex-team.ru/user/avatar/test-login/42"
                />
              </div>
              <span
                className="logo__login"
              >
                test-login
              </span>
            </a>
          </div>
          <h1
            className="layout-header__title"
          >
            Источники
          </h1>
        </div>
      </header>
      <article
        className="layout-page-content__content layout-page-content__content_indent"
      >
        <div
          className="grid-center"
        >
          <div
            className="Spin2 Spin2_progress Spin2_size_l Spin2_view_default"
          />
        </div>
      </article>
    </main>
  </section>
</div>
`;

exports[`Route should render <PageTasks /> 1`] = `
<div
  className="layout-page"
>
  <section
    className="layout-page__left-column"
  >
    <a
      aria-label="Логотип"
      className="layout-page__logo"
      href="/"
    />
    <nav
      className="menu"
    >
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_uploads icon_size_medium icon_color_black"
                />
                Источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/ugc-shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_ugc icon_size_medium icon_color_black"
                />
                UGC источники
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/shipments"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_archive icon_size_medium icon_color_black"
                />
                Поставки
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/map"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_map icon_size_medium icon_color_black"
                />
                Карта сессий
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="line"
      />
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/panoramas"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_clock icon_size_medium icon_color_black"
                />
                Редактор панорам
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/commits"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_branch icon_size_medium icon_color_black"
                />
                Коммиты
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item"
      >
        <a
          className="menu-item__link"
          href="/releases"
          onClick={[Function]}
        >
          <button
            aria-pressed={false}
            autoComplete="off"
            className="Button2 Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_thunder icon_size_medium icon_color_black"
                />
                Релизы
              </div>
            </span>
          </button>
        </a>
      </div>
      <div
        className="menu-item menu-item_active"
      >
        <a
          className="menu-item__link"
          href="/tasks"
          onClick={[Function]}
        >
          <button
            aria-pressed={true}
            autoComplete="off"
            className="Button2 Button2_checked Button2_view_clear Button2_size_m Button2_pin_circle-circle"
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            size="m"
            type="button"
          >
            <span
              className="Button2-Text"
            >
              <div
                className="menu-item__content"
              >
                <span
                  className="icon icon_name_check icon_size_medium icon_color_white"
                />
                Задачи
              </div>
            </span>
          </button>
        </a>
      </div>
    </nav>
  </section>
  <section
    className="layout-page__right-column"
  >
    <main
      className="layout-page-content"
    >
      <header
        className="layout-header"
      >
        <div
          className="layout-header__header"
        >
          <div
            className="layout-header__right"
          >
            <a
              className="logo"
              href="https://staff.yandex-team.ru/test-login"
              target="_blank"
            >
              <div
                className="UserPic UserPic_size_m"
              >
                <img
                  className="UserPic-Image"
                  src="https://center.yandex-team.ru/user/avatar/test-login/42"
                />
              </div>
              <span
                className="logo__login"
              >
                test-login
              </span>
            </a>
          </div>
          <h1
            className="layout-header__title"
          >
            Задачи
          </h1>
        </div>
        <div
          className="layout-header-filter"
        >
          <span
            className="layout-header-filter__title"
          >
            Статус
          </span>
          <nav
            className="filter-control filter-control_disabled"
          >
            <button
              className="filter-control__item filter-control__item_active"
              disabled={true}
              onClick={[Function]}
            >
              Все
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Запущен
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Ошибка
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Ожидание
            </button>
            <button
              className="filter-control__item"
              disabled={false}
              onClick={[Function]}
            >
              Завершен
            </button>
          </nav>
        </div>
      </header>
      <article
        className="layout-page-content__content layout-page-content__content_indent"
      >
        <div
          className="grid-center"
        >
          <div
            className="Spin2 Spin2_progress Spin2_size_l Spin2_view_default"
          />
        </div>
      </article>
    </main>
  </section>
</div>
`;
